src/main/java/com/example/userbehaviormanagement/services/exceptions/errors/UnauthorizedException.java
package com.example.userbehaviormanagement.services.exceptions.errors;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
